<resources>
    <string name="app_name">IDO</string>
    <string name="action_settings">Settings</string>
    <string name="done">Done</string>
    <string name="switch_text">Turn on notifications for this goal</string>
    <string name="addgoalbutton">Choose a new goal!</string>
    <string name="delete">DELETE</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="title_activity_add_item">Item Select</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="save_button">Save</string>
    <string name="user_list">User List</string>
    <string name="todo_today">Today\'s Investments</string>
    <string name="notif_settings">Notification Settings</string>
    <string name="cancel">CANCEL</string>
    <string name="cuckoo_clock">Cuckoo Clock</string>
    <string name="channel_name">IDOChannel</string>
    <string name="channel_description">This is the channel for IDO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="TextView_1_Sign_In">Don\'t Have An Account?</string>
    <string name="TextView_1_Sign_Up">Already Have An Account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="sign_out">Sign Out</string>
    <string name="notification">Notification</string>

    <string-array name="alarm_array">
        <item>Bright morning</item>
        <item>Cuckoo clock</item>
        <item>Early twilight</item>
        <item>Full of wonder</item>
        <item>Gentle breeze</item>
        <item>Icicles</item>
        <item>Jump start</item>
        <item>Loose change</item>
        <item>A real hoot</item>
        <item>Rolling fog</item>
        <item>Spokes</item>
        <item>Sunshower</item>
    </string-array>
</resources>
